# sddx

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: 00-introduction.md  01-architecture.md  02-state-machine-protocol.md  03-event-system.md  04-simulation-runner.md  05-convergence-criteria.md  06-io-adapters.md  07-workflow-guide.md  08-scenario-language.md  09-stdlib.md  10-cli.md  migration.md  review-v0.1.md
examples/calculator/: sddx_project.py
examples/calculator/adapters/: cli.py
examples/calculator/invariants/: calc_invariants.py
examples/calculator/machines/: calculator.py  memory_register.py  operation_log.py
examples/calculator/scenarios/failure/: divide_by_zero_chained.yaml  divide_by_zero_compute.yaml  recover_from_error.yaml
examples/calculator/scenarios/happy_path/: chained_left_to_right.yaml  clear_and_close.yaml  memory_accumulate.yaml  memory_recall_into_operand.yaml  memory_store_recall.yaml  memory_subtract_and_clear.yaml  multi_digit_subtract.yaml  operator_replace.yaml  result_then_chain.yaml  (+2 more)
examples/subscription_billing/: README.md  sddx_project.py
examples/subscription_billing/invariants/: billing_invariants.py
examples/subscription_billing/machines/: fake_payment_provider.py  operation_log.py  payment_attempt.py  subscription_lifecycle.py
src/sddx/: __init__.py  __main__.py  events.py  invariants.py  protocol.py  runner.py  scenario.py  timing.py
src/sddx/std/: __init__.py  barrier.py  retry.py
tests/: test_events.py  test_protocol.py  test_runner.py  test_scenario.py  test_std.py  test_timing.py
(+15 files in other folders)
