[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sddx"
version = "0.1.0"
description = "Simulation-Driven Development, eXtended"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
sddx = "sddx.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sddx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
